--- a/dotfiles/hyprland/waybar/backup/style.css
+++ b/dotfiles/hyprland/waybar/backup/style.css
@@ -1,73 +1,150 @@
 * {
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: Hack Nerd Font, Helvetica, Arial, sans-serif;
-    font-size: 14px;
+  /* `otf-font-awesome` is required to be installed for icons */
+  font-family: Firacode Nerd Font Propo, Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
 
 window#waybar {
-    color: #c8d3f5;
-    /* background: rgba(0, 0, 0, 0); */
-    background-color: #1a1b26;
-    border-bottom: 2px solid #7aa2f7;
+  color: #cad3f5;
+  background-color: #181926;
+  border-bottom: 1px solid #8aadf4;
 }
 
 tooltip {
-  background: #1a1b26;
-  border: 1px solid #7aa2f7;
+  background: #1e1e2e;
+  border: 1px solid #8aadf4;
   border-radius: 5px;
 }
 
 tooltip label {
-  color: #c8d3f5;
+  color: #cad3f5;
 }
 
 #workspaces button {
-  color: #c8d3f5;
-  padding: 2;
+  color: #494d64;
+  padding: 0 8;
+  border-radius: 0;
+}
+
+#workspaces button label {
+  font-size: 28px;
 }
 
 #workspaces button.active {
-  color: #1a1b26;
-  background: #7aa2f7;
-}
-
-#workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+  color: #8aadf4;
+  font-size: 20px;
 }
 
 #custom-power {
-  color: #7aa2f7;
+	font-size: 20px;
+  color: #8aadf4;
+  /* background-color: #181926; */
+  border-bottom: 1px solid #8aadf4;
+	margin-right: 5px;
+}
+
+#custom-power:hover {
+	color: #cad3f5;
 }
 
 #idle_inhibitor {
+	font-size: 20px;
+  padding: 0 8px;
+  color: #8aadf4;
+}
+
+#idle_inhibitor:hover {
+	color: #cad3f5;
+}
+
+#custom-web,
+#custom-obsidian,
+#custom-files {
+  color: #8aadf4;
+  font-size: 20px;
+  padding: 0 7;
+}
+
+#custom-web:hover,
+#custom-obsidian:hover,
+#custom-files:hover {
+  color: #cad3f5;
+}
+
+#custom-divider {
+  padding: 0;
+  color: #494d64;
+  font-size: 28px;
+}
+
+#custom-sep {
+  padding: 0;
+  color: #494d64;
+  font-size: 24px;
+}
+
+#tray {
   padding: 0 10px;
-  color: #e0af68;
+  font-size: 20px;
 }
 
 #custom-pacman,
+#custom-gpu,
 #clock,
 #battery,
 #cpu,
 #memory,
 #disk,
 #temperature,
-#backlight,
-#network,
-#pulseaudio,
-#tray,
-#mpd {
-  padding: 0 10px;
-  color: #7aa2f7;
+#keyboard-state {
+  font-size: 20px;
+  padding: 0 8px;
+  color: #f5a97f;
+}
+
+#custom-clip,
+#pulseaudio {
+  font-size: 20px;
+  padding: 0 8px;
+  color: #8aadf4;
+}
+
+#custom-clip:hover,
+#pulseaudio:hover {
+	color: #cad3f5;
+}
+
+#pulseaudio.label {
+	color: red;
+}
+
+#custom-prev,
+#custom-play,
+#custom-next {
+	color: #8aadf4;
+  font-size: 20px;
+  padding: 0 8px;
+}
+
+#custom-prev:hover,
+#custom-play:hover,
+#custom-next:hover {
+	color: #cad3f5;
+}
+
+#clock {
+  border-bottom: 1px solid #8aadf4;
 }
 
 #window,
 #workspaces {
-    margin: 0 4px;
+  margin: 0 4px;
+  font-size: 20px;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
+  margin-left: 0;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
@@ -78,7 +155,7 @@ tooltip label {
 /* Right modules */
 
 #pulseaudio.muted {
-    color: red;
+  color: red;
 }
 
 #battery.charging, #battery.plugged {
@@ -86,79 +163,79 @@ tooltip label {
 }
 
 @keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
+  to {
+    background-color: #ffffff;
+    color: #000000;
+  }
 }
 
 /* Using steps() instead of linear as a timing function to limit cpu usage */
 #battery.critical:not(.charging) {
-    background-color: #f53c3c;
-    color: #ffffff;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: steps(12);
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    border-radius: 8px;
+  background-color: #ed8796;
+  color: #ffffff;
+  animation-name: blink;
+  animation-duration: 0.5s;
+  animation-timing-function: steps(12);
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 label:focus {
-    background-color: #000000;
+  background-color: #000000;
 }
 
-#network.disconnected {
-    color: #f7758e;
-    border-radius: 8px;
+#keyboard-state label.locked {
+	background-color: #ed8796;
+	color: #1e1e2e;
+	font-weight: bold;
+  border-bottom: 1px solid #8aadf4;
 }
 
 #temperature.critical {
-    color: #f7758e;
+  color: #ed8796;
 }
 
 #tray {
-    background-color: #7aa2f7;
-    color: #1a1b26;
-    border-radius: 8px;
+  color: #494d64;
+  background-color: #181926;
+  border-bottom: 1px solid #8aadf4;
 }
 
 #tray > .passive {
-    -gtk-icon-effect: dim;
-    border-radius: 8px;
+  -gtk-icon-effect: dim;
 }
 
 #tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #f7758e;
-    color: #1a1b26;
-    border-radius: 8px;
+  -gtk-icon-effect: highlight;
+  background-color: #ed8796;
+  color: #494d64;
 }
 
 #idle_inhibitor.activated {
-    color: #f7758e;
+  color: #24273a;
+  background-color: #ed8796;
+}
+
+#idle_inhibitor.activated:hover {
+	background-color: #cad3f5;
 }
 
 #mpd {
-    background-color: #7aa2f7;
-    color: #1a1b26;
-    border-radius: 8px;
+  background-color: #8aadf4;
+  color: #494d64;
 }
 
 #mpd.disconnected {
-    background-color: #7aa2f7;
-    color: #1a1b26;
-    border-radius: 8px;
+  background-color: #8aadf4;
+  color: #494d64;
 }
 
 #mpd.stopped {
-    background-color: #7aa2f7;
-    color: #1a1b26;
-    border-radius: 8px;
+  background-color: #8aadf4;
+  color: #494d64;
 }
 
 #mpd.paused {
-    background-color: #7aa2f7;
-    color: #1a1b26;
-    border-radius: 8px;
+  background-color: #8aadf4;
+  color: #494d64;
 }
