--- a/dotfiles/archbook/waybar/style.css
+++ b/dotfiles/archbook/waybar/style.css
@@ -1,17 +1,17 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
-  font-family: Hack Nerd Font, Helvetica, Arial, sans-serif;
+  font-family: Firacode Nerd Font Propo, Helvetica, Arial, sans-serif;
   font-size: 16px;
 }
 
 window#waybar {
   color: #cad3f5;
   background-color: #181926;
-  border-bottom: 1px solid #8aadf4;
+  border-bottom: 1px solid #494d64;
 }
 
 tooltip {
-  background: #494d64;
+  background: #1e1e2e;
   border: 1px solid #8aadf4;
   border-radius: 5px;
 }
@@ -36,28 +36,51 @@ tooltip label {
 }
 
 #custom-power {
+	font-size: 20px;
   color: #8aadf4;
-  background-color: #181926;
-  border-bottom: 1px solid #8aadf4;
+  /* background-color: #181926; */
+  border-bottom: 1px solid #494d64;
+	margin-right: 5px;
+}
+
+#custom-power:hover {
+	color: #cad3f5;
 }
 
 #idle_inhibitor {
+	font-size: 20px;
   padding: 0 8px;
   color: #8aadf4;
+}
+
+#idle_inhibitor:hover {
+	color: #cad3f5;
 }
 
 #custom-web,
 #custom-obsidian,
 #custom-files {
   color: #8aadf4;
-  font-size: 24px;
+  font-size: 20px;
   padding: 0 7;
+}
+
+#custom-web:hover,
+#custom-obsidian:hover,
+#custom-files:hover {
+  color: #cad3f5;
 }
 
 #custom-divider {
   padding: 0;
   color: #494d64;
-  font-size: 20px;
+  font-size: 28px;
+}
+
+#custom-sep {
+  padding: 0;
+  color: #494d64;
+  font-size: 24px;
 }
 
 #tray {
@@ -65,7 +88,9 @@ tooltip label {
   font-size: 20px;
 }
 
+#custom-weather,
 #custom-pacman,
+#custom-gpu,
 #clock,
 #battery,
 #cpu,
@@ -73,14 +98,44 @@ tooltip label {
 #disk,
 #temperature,
 #backlight,
-#pulseaudio,
-#mpd {
+#keyboard-state {
+  font-size: 20px;
   padding: 0 8px;
   color: #f5a97f;
 }
 
+#custom-clip,
+#pulseaudio {
+  font-size: 20px;
+  padding: 0 8px;
+  color: #8aadf4;
+}
+
+#custom-clip:hover,
+#pulseaudio:hover {
+	color: #cad3f5;
+}
+
+#pulseaudio.label {
+	color: red;
+}
+
+#custom-prev,
+#custom-play,
+#custom-next {
+	color: #8aadf4;
+  font-size: 20px;
+  padding: 0 8px;
+}
+
+#custom-prev:hover,
+#custom-play:hover,
+#custom-next:hover {
+	color: #cad3f5;
+}
+
 #clock {
-  border-bottom: 1px solid #8aadf4;
+  border-bottom: 1px solid #494d64;
 }
 
 #window,
@@ -105,10 +160,6 @@ tooltip label {
   color: red;
 }
 
-#battery.charging, #battery.plugged {
-  color: green;
-}
-
 @keyframes blink {
   to {
     background-color: #ffffff;
@@ -131,6 +182,13 @@ label:focus {
   background-color: #000000;
 }
 
+#keyboard-state label.locked {
+	background-color: #ed8796;
+	color: #1e1e2e;
+	font-weight: bold;
+  border-bottom: 1px solid #494d64;
+}
+
 #temperature.critical {
   color: #ed8796;
 }
@@ -138,7 +196,7 @@ label:focus {
 #tray {
   color: #494d64;
   background-color: #181926;
-  border-bottom: 1px solid #8aadf4;
+  border-bottom: 1px solid #494d64;
 }
 
 #tray > .passive {
@@ -154,6 +212,10 @@ label:focus {
 #idle_inhibitor.activated {
   color: #24273a;
   background-color: #ed8796;
+}
+
+#idle_inhibitor.activated:hover {
+	background-color: #cad3f5;
 }
 
 #mpd {
@@ -175,3 +237,4 @@ label:focus {
   background-color: #8aadf4;
   color: #494d64;
 }
+
