--- a/dotfiles/hyprland/waybar/style.css
+++ b/dotfiles/hyprland/waybar/style.css
@@ -103,6 +103,7 @@ tooltip label {
   color: #f5a97f;
 }
 
+#custom-notify,
 #custom-clip,
 #pulseaudio {
   font-size: 20px;
@@ -110,6 +111,7 @@ tooltip label {
   color: #8aadf4;
 }
 
+#custom-notify:hover,
 #custom-clip:hover,
 #pulseaudio:hover {
 	color: #cad3f5;
