--- a/dotfiles/archbook/waybar/style.css
+++ b/dotfiles/archbook/waybar/style.css
@@ -194,7 +194,7 @@ label:focus {
 }
 
 #tray {
-  color: #494d64;
+  color: #8aadf4;
   background-color: #181926;
   border-bottom: 1px solid #494d64;
 }
